core conf increase db connection pool size

--- a/core/src/main/resources/application.yaml.sample
+++ b/core/src/main/resources/application.yaml.sample
@@ -8,6 +8,9 @@ spring:
     jdbc-url: "<url>"
     username: "<username>"
     password: "<password>"
+    hikari:
+      maximum-pool-size: 90
+      minimum-idle: 10
   mail:
     host: "<mailhost>"
     properties:
