EZ-1613 update db driver

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -69,9 +69,9 @@ dependencies {
     implementation 'org.jetbrains.exposed:exposed-jdbc:0.44.1'
 
     implementation 'com.zaxxer:HikariCP:3.4.5'
-    implementation "org.postgresql:postgresql:42.2.14"
+    implementation 'org.postgresql:postgresql:42.6.0'
     liquibaseRuntime 'org.liquibase:liquibase-core:3.6.3'
-    liquibaseRuntime 'org.postgresql:postgresql:42.2.14'
+    liquibaseRuntime 'org.postgresql:postgresql:42.6.0'
 
     // Kotlin support
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
