core add missing activity merge window conf key

--- a/core/src/main/resources/application.yaml.sample
+++ b/core/src/main/resources/application.yaml.sample
@@ -65,5 +65,9 @@ easy:
     exercise-index-normalisation:
       cron: "0 5 3 * * *"
 
+    activity:
+      merge-window:
+        s: "5"
+
   wui:
     base-url: "https://easy.example"
