EZ-1601 show "please update" toast when static build number is out of date

--- a/wui/src/main/kotlin/AppProperties.kt.sample
+++ b/wui/src/main/kotlin/AppProperties.kt.sample
@@ -25,6 +25,5 @@ object AppProperties {
     const val DISCORD_INVITE_ID = ""
     const val TOS_URL = ""
 
-    const val PARTICIPANTS_ROWS_ON_PAGE = 50
-    const val SUBMISSIONS_ROWS_ON_PAGE = 50
+    const val STATIC_UPDATE_POLL_SEC = 5 * 60
 }
