--- a/tsl/src/main/resources/test_tsl4.YAML
+++ b/tsl/src/main/resources/test_tsl4.YAML
@@ -9,11 +9,23 @@ tests:
     id: 222
     className: ParentClass
     genericCheck:
-      checkType: ANY_OF_THESE
+      checkType: ALL_OF_THESE
       expectedValue:
         - ChildClass
         - TestClass
-      beforeMessage: Kontrollib, kas funktsioon tagastab antud võtmesõna.
-      passedMessage: Funktsioon tagastab antudvõtmesõna.
-      failedMessage: Funktsioon ei tagasta antud võtmesõna.
-    name: Funktsiooni käivituse test (isendimeetod).
+      beforeMessage: Kontrollib, kas klass on etteantud klasside ülemklass.
+      passedMessage: Klass on etteantud klasside ülemklass.
+      failedMessage: Klass ei ole etteantud klasside ülemklass.
+    name: Ülemklassi kontroll
+  - type: class_is_subclass_test
+    id: 222
+    className: ChildClass
+    genericCheck:
+      checkType: ANY_OF_THESE
+      expectedValue:
+        - ParentClass
+        - TestClass
+      beforeMessage: Kontrollib, kas klass on etteantud klassi alamklass.
+      passedMessage: Klass on etteantud klassi alamklass.
+      failedMessage: Klass ei ole etteantud klassi alamklass.
+    name: Alamklassi kontroll.
