--- a/tsl/src/main/resources/test_tsl19.YAML
+++ b/tsl/src/main/resources/test_tsl19.YAML
@@ -12,7 +12,7 @@ tests:
       expectedValue:
         - test
         - parent_method
-      beforeMessage: Kontrollib, kas funktsioon kutsub välja turtle funktsiooni.
-      passedMessage: Funktsioon kutsus välja vähemalt ühe turtle funktsiooni.
-      failedMessage: Funktsioon ei kutsnud välja ühtegi turtle funktsiooni.
-    name: Funktsioon kutsub välja turtle funktsiooni.
+      beforeMessage: Kontrollib, kas funktsioon kutsub välja {expected} klassi meetodi.
+      passedMessage: Funktsioon kutsus välja {expected} klassi meetodi.
+      failedMessage: Funktsioon ei kutsnud välja {expected} klassi meetodi.
+    name: Funktsioon kutsub välja klassi meetodi.
