EZ-1675 delete inactive users from keycloak

--- a/core/src/main/resources/application.yaml.sample
+++ b/core/src/main/resources/application.yaml.sample
@@ -69,5 +69,12 @@ easy:
       merge-window:
         s: "300"
 
+    keycloak:
+      base-url: "<base-url>"
+      realm: "<realm>"
+      client-id: "<client-id>"
+      client-secret: "<client-secret>"
+
+
   wui:
     base-url: "https://easy.example"
