EZ-1675 add option to ignore missing keycloak users

--- a/core/src/main/resources/application.yaml.sample
+++ b/core/src/main/resources/application.yaml.sample
@@ -74,6 +74,7 @@ easy:
       realm: "<realm>"
       client-id: "<client-id>"
       client-secret: "<client-secret>"
+      ignore-missing-keycloak-users: false
 
 
   wui:
