EZ-1675 turn on deleting, improve notifications

--- a/core/src/main/resources/application.yaml.sample
+++ b/core/src/main/resources/application.yaml.sample
@@ -70,6 +70,7 @@ easy:
         s: "300"
 
     keycloak:
+      cron: "0 5 2 * * *"
       base-url: "<base-url>"
       realm: "<realm>"
       client-id: "<client-id>"
