--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ out/
 build/
 
 core/db/database.properties
+core/src/main/resources/db/database.properties
 core/src/main/resources/application.yaml
 core/src/test/resources/application.yaml
 
